Update: update language, update to mediapipe

--- a/facedetectlibrary/build.gradle
+++ b/facedetectlibrary/build.gradle
@@ -43,6 +43,10 @@ dependencies {
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+
+
+    // Face Mesh Detection
+    implementation 'com.google.mlkit:face-mesh-detection:16.0.0-beta1'
     implementation(name: 'MGFaceppSDK-0.5.2', ext: 'aar')
-    implementation(name: 'MGLicenseManagerSDK-0.3.1', ext: 'aar')
+//    implementation(name: 'MGLicenseManagerSDK-0.3.1', ext: 'aar')
 }
